OO-3609: add identity key, async support, clean-up...